--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.1.0-alpha06'
     implementation 'com.github.ImaginativeShohag:Oops-No-Internet:v1.1.5'
+    implementation 'com.android.volley:volley:1.2.0'
 
 }
